tests/rustdoc-ui/intra-doc/ambiguity.stderr
error: `true` is both a module and a primitive type
  --> $DIR/ambiguity.rs:38:6
   |
LL | /// [true]
   |      ^^^^ ambiguous link
   |
note: the lint level is defined here
  --> $DIR/ambiguity.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to link to the module, prefix with `mod@`
   |
LL | /// [mod@true]
   |      ++++
help: to link to the primitive type, prefix with `prim@`
   |
LL | /// [prim@true]
   |      +++++

error: `ambiguous` is both a function and a struct
  --> $DIR/ambiguity.rs:27:7
   |
LL | /// [`ambiguous`] is ambiguous.
   |       ^^^^^^^^^ ambiguous link
   |
help: to link to the function, add parentheses
   |
LL | /// [`ambiguous()`] is ambiguous.
   |                ++
help: to link to the struct, prefix with `struct@`
   |
LL | /// [`struct@ambiguous`] is ambiguous.
   |       +++++++

error: `ambiguous` is both a function and a struct
  --> $DIR/ambiguity.rs:29:6
   |
LL | /// [ambiguous] is ambiguous.
   |      ^^^^^^^^^ ambiguous link
   |
help: to link to the function, add parentheses
   |
LL | /// [ambiguous()] is ambiguous.
   |               ++
help: to link to the struct, prefix with `struct@`
   |
LL | /// [struct@ambiguous] is ambiguous.
   |      +++++++

error: `multi_conflict` is a function, a struct, and a macro
  --> $DIR/ambiguity.rs:31:7
   |
LL | /// [`multi_conflict`] is a three-way conflict.
   |       ^^^^^^^^^^^^^^ ambiguous link
   |
help: to link to the function, add parentheses
   |
LL | /// [`multi_conflict()`] is a three-way conflict.
   |                     ++
help: to link to the struct, prefix with `struct@`
   |
LL | /// [`struct@multi_conflict`] is a three-way conflict.
   |       +++++++
help: to link to the macro, add an exclamation mark
   |
LL | /// [`multi_conflict!`] is a three-way conflict.
   |                     +

error: `type_and_value` is both a constant and a module
  --> $DIR/ambiguity.rs:33:16
   |
LL | /// Ambiguous [type_and_value].
   |                ^^^^^^^^^^^^^^ ambiguous link
   |
help: to link to the constant, prefix with `const@`
   |
LL | /// Ambiguous [const@type_and_value].
   |                ++++++
help: to link to the module, prefix with `mod@`
   |
LL | /// Ambiguous [mod@type_and_value].
   |                ++++

error: `foo::bar` is both a function and an enum
  --> $DIR/ambiguity.rs:35:43
   |
LL | /// Ambiguous non-implied shortcut link [`foo::bar`].
   |                                           ^^^^^^^^ ambiguous link
   |
help: to link to the function, add parentheses
   |
LL | /// Ambiguous non-implied shortcut link [`foo::bar()`].
   |                                                   ++
help: to link to the enum, prefix with `enum@`
   |
LL | /// Ambiguous non-implied shortcut link [`enum@foo::bar`].
   |                                           +++++

error: aborting due to 6 previous errors

